--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -306,8 +306,7 @@ src/test/
 .src/test/resources/application-test.properties
 [source, properties]
 ----
-#spring.datasource.url=jdbc:h2:mem:sushi
-spring.datasource.url=jdbc:h2:~/db/testapisushi;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:sushi
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -315,7 +314,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # applique une initialisation de la DB via data-h2.sql dans test/resources/
 
-# attention, application.properties de base est également lancé,
+# attention, application.properties de base est également interprété,
 # donc si spring.jpa.hibernate.ddl-auto=create, la base de données sera vide
 # (la mettre en update)
 
