add TODO tasks in index.adoc

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -437,3 +437,13 @@ That's all !
 
 Le service, une fois lancé, est prêt à recevoir des requêtes HTTP, à une contrainte _Cross Origin_ près (voir https://spring.io/guides/gs/rest-service-cors/)
 
+== Améliorations possibles
+
+(une TODO liste)
+
+- Passer le chemin du fichier JSON initial en paramètre de l'application
+
+- API : Ajouter l'accès à une boxe seulement, via son id. Exemple
++
+http://localhost:8080/api/boxe/8
+
